; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/crypto/extr_sha3_256_s390.c_sha3_256_export.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/crypto/extr_sha3_256_s390.c_sha3_256_export.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }
%struct.s390_sha_ctx = type { i32, i32, i32 }
%struct.sha3_state = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*, i8*)* @sha3_256_export to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sha3_256_export(%struct.shash_desc* %0, i8* %1) #0 {
  %3 = alloca %struct.shash_desc*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.s390_sha_ctx*, align 8
  %6 = alloca %struct.sha3_state*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.shash_desc*, %struct.shash_desc** %3, align 8
  %8 = call %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc* %7)
  store %struct.s390_sha_ctx* %8, %struct.s390_sha_ctx** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.sha3_state*
  store %struct.sha3_state* %10, %struct.sha3_state** %6, align 8
  %11 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %5, align 8
  %12 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.sha3_state*, %struct.sha3_state** %6, align 8
  %15 = getelementptr inbounds %struct.sha3_state, %struct.sha3_state* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load %struct.sha3_state*, %struct.sha3_state** %6, align 8
  %17 = getelementptr inbounds %struct.sha3_state, %struct.sha3_state* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %5, align 8
  %20 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @memcpy(i32 %18, i32 %21, i32 4)
  %23 = load %struct.sha3_state*, %struct.sha3_state** %6, align 8
  %24 = getelementptr inbounds %struct.sha3_state, %struct.sha3_state* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.s390_sha_ctx*, %struct.s390_sha_ctx** %5, align 8
  %27 = getelementptr inbounds %struct.s390_sha_ctx, %struct.s390_sha_ctx* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @memcpy(i32 %25, i32 %28, i32 4)
  ret i32 0
}

declare dso_local %struct.s390_sha_ctx* @shash_desc_ctx(%struct.shash_desc*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
